# materialize-layout

./: .crails  .gitignore  CMakeLists.txt  package.json  prebuild.sh
javascripts/: editor.js  index.js
src/: layout.cpp  layout.hpp  main.cpp  style.cpp  style.hpp
stylesheets/: _custom.scss  _theme.scss  admin.scss  layout.scss
stylesheets/admin/: _cmsFarm.scss  _main.scss  _plugins.scss  _settings.scss  _tomSelect.scss
stylesheets/admin/materialize/: _attachments.scss  _ckeditor.scss  _dialog.scss  _file_picker.scss  _menu_editor.scss  _multiple_image_picker.scss  _opengraph_picker.scss  _page_editor.scss  _page_editor_reset.scss  _sidenav.scss  _url_picker.scss
stylesheets/theme/: _card_info.scss  _component_ribbon.scss  _component_screenshots.scss  _flash.scss  _footer.scss  _form.scss  _header.scss  _layout.scss  _logo.scss  _navbar.scss  _thumbnail.scss
views/layouts/materialize/: admin.html  admin_head.html  wizard.html
views/layouts/themes/: materialize.html
